@@ -1,3 +1,7 @@
+2007-08-12  Ales Hakl  <ales at hakl dot net>
+
+	* lib/load.c: provide/require mechanism
+
 2007-08-08  Ales Hakl  <ales at hakl dot net>
 
 	* src/object.c: unified exceptions to not-a-class-instance
